// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterContext should apply a hook for useLocation: location 1`] = `
{
  "_id": "92bfb354f8f38914f06cb3fad36215957efaf7cc",
  "hash": "",
  "lorem": "ipsum",
  "search": "?lorem=ipsum",
}
`;

exports[`RouterContext should apply a hook for useNavigate: navigation push 1`] = `
[
  "./rhods?lorem=ipsum",
  "./rhel?lorem=ipsum",
  "./rhel?lorem=ipsum",
]
`;

exports[`RouterContext should apply a hook for useRouteDetail: route details, closest 1`] = `
{
  "detailProps": [
    "_passed",
    "allConfigs",
    "firstMatch",
    "errorRoute",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productArchitectures",
    "query",
    "graphTallyQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": true,
  "productGroup": "RHEL",
  "productPath": "l",
}
`;

exports[`RouterContext should apply a hook for useRouteDetail: route details, match 1`] = `
{
  "detailProps": [
    "_passed",
    "allConfigs",
    "firstMatch",
    "errorRoute",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productArchitectures",
    "query",
    "graphTallyQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": false,
  "productGroup": "RHEL",
  "productPath": "rhel",
}
`;

exports[`RouterContext should apply a hook for useSearchParams: initial params 1`] = `
{
  "lorem": "ipsum",
}
`;

exports[`RouterContext should apply a hook for useSetRouteDetail: dispatch route config path 1`] = `
[
  [
    {
      "config": "dolor-sit",
      "type": "SET_PRODUCT",
    },
  ],
]
`;

exports[`RouterContext should return specific properties: specific properties 1`] = `
{
  "useLocation": [Function],
  "useNavigate": [Function],
  "useRouteDetail": [Function],
  "useSearchParams": [Function],
  "useSetRouteDetail": [Function],
}
`;
